--- a/1/index.html
+++ b/1/index.html
@@ -13,7 +13,7 @@
         alert(1);
     </script> -->
 
-    <p onclick="">Hello world</p>
+    <p onclick="">Hello world!!!</p>
     <script src="js/test.js"></script> 
 
     <p>Hello world</p>
