--- a/1/index.html
+++ b/1/index.html
@@ -17,5 +17,6 @@
     <script src="js/test.js"></script> 
     <h2> Hello again</h2>
     <p>Hello world</p>
+    <h3>h3 head</h3>
 </body>
 </html>
