--- a/1/index.html
+++ b/1/index.html
@@ -15,5 +15,6 @@
 
     <p onclick="">Hello world!!!</p>
     <script src="js/test.js"></script> 
+    <script src="js/course.js"></script>
 </body>
 </html>
