--- a/1/index.html
+++ b/1/index.html
@@ -14,7 +14,6 @@
     </script> -->
 
     <p onclick="">Hello world!!!</p>
-    <script src="js/test.js"></script> 
-    <script src="js/course.js"></script>
+    <script src="js/simulation.js"></script> 
 </body>
 </html>
