--- a/1/index.html
+++ b/1/index.html
@@ -14,6 +14,7 @@
     </script> -->
 
     <p onclick="">Hello world!!!</p>
-    <script src="js/simulation.js"></script> 
+    <!--script src="js/simulation.js"></!--script--> 
+    <script src="js/arrays.js"></script> 
 </body>
 </html>
