--- a/1/index.html
+++ b/1/index.html
@@ -15,6 +15,6 @@
 
     <p onclick="">Hello world!!!</p>
     <!--script src="js/simulation.js"></!--script--> 
-    <script src="js/arrays.js"></script> 
+    <script src="js/simulation.js"></script> 
 </body>
 </html>
